# repoinsight-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: DESIGN.md  RELEASE_CHECKLIST.md  RESUME_SNIPPET.md  ROADMAP.md  TOOL_SAFETY.md
examples/reports/: example_report.md
repoinsight/: __init__.py  cli.py  config.py
repoinsight/agent/: __init__.py  builder.py  prompts.py  schemas.py  tools.py
repoinsight/analyzers/: __init__.py  project_detector.py
repoinsight/reporting/: __init__.py  json_writer.py  markdown_renderer.py
repoinsight/tools/: __init__.py  command_tools.py  file_tools.py  git_tools.py  report_tools.py  search_tools.py
repoinsight/utils/: __init__.py  command_guard.py  logger.py  path_guard.py  report_guard.py
repoinsight/workflow/: __init__.py  graph.py  llm_analyzer.py  nodes.py  prompts.py  state.py
tests/: test_agent_tools.py  test_cli.py  test_command_guard.py  test_command_tools.py  test_config.py  test_doctor_cli.py  test_file_tools.py  test_git_tools.py  test_path_guard.py  test_project_detector.py  test_report_guard.py  test_report_rendering.py  test_report_tools.py  test_search_tools.py  test_structured_report_tools.py  test_workflow_graph.py  test_workflow_llm_analyzer.py  test_workflow_nodes.py  test_workflow_state.py
